fix: blur circle overflowing

--- a/css/index.scss
+++ b/css/index.scss
@@ -7,6 +7,8 @@ body {
         position: absolute;
         top: 0;
         z-index: -1;
+        width: 100%;
+        height: 100%;
     }
 }
 
