--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@ body .blur-color-circle {
     position: absolute;
     top: 0;
     z-index: -1;
+    width: 100%;
+    height: 100%;
 }
 
 .wrapper {
